# Projeto-EDOO

./: .gitignore  Aperitivo.h  Barzinho.cpp  Barzinho.h  Bebidas.h  CMakeLists.txt  Cliente.cpp  Cliente.h  Pedido.cpp  Pedido.h  Produto.h  README.md  barzinho.db  main.cpp  mainterminal.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  telacardapio.cpp  telacardapio.h  telacardapio.ui  telafinal.cpp  telafinal.h  telafinal.ui
